== Version 0.7.0 (in SVN)

* Added the set selection constraints (set array access, select union, select intersection (optionally with specified universe) and select disjoint).

== Version 0.6.1
This release fixes various bugs introduced in 0.6.0 and changes the way that
int variable domains are specified (breaking backward-compatibility).

* The domain for int variables can no longer be specified as several individual elements, it has to be specified as either a single element, a range or another enumeration.
* Fixed a bug with set cardinality, min and max constraints using composite sugar.
* Variables can now be created inside the optimization block.

== Version 0.6.0
This release adds most of the remaining set constraints. It also makes 
backward-compatibility breaking changes to the way that properties of variables
are accessed.

* Added channel constraints involving set variables.
* Added set min and max constraints.
* Added set sum constraints (optionally weighted or substituted).
* Added include (match) constraint for sets.
* Added distinct constraints (distinct and at most one) for sets.
* Added branch and bound search (optimization search). It's quite shaky at the moment though.
* Assigned values of variables are now always accessed using #value instead of the various previous methods. The methods for extracting information from set variables have been changed and renamed.
* Enumerations containing variables now provide a convenience method #values which returns an array of the enum's values.

== Version 0.5.0
This release adds set variables and some of their constraints, along with the 
last of the boolean constraints.

* Added exclusive or and implication.
* Added conjunction and disjunction for boolean enumerations.
* Added set variables. They are created using Model{#set_var, #set_var_array, #set_var_matrix}.
* Added domain constraints for set variables.
* Added relation constraints for set variables.
* Added set cardinality constraints.
