@@ -66,6 +66,10 @@ The following operations are available.
 * intersection
 * minus
 
+In the above example @set@, @another_set@ and @a_third_set@ can each be either
+a set variable or a constant set. The only exception is that all three can not
+be constant sets.
+
 h3. Cardinality
 
 Cardinality constraints constrain the size of the set. Constraining the size of 
