@@ -18,6 +18,26 @@ module Gecode
       end_code
     end
   end
+  
+  module FixnumEnumMethods
+    Gecode::Constraints::Util::SET_OPERATION_TYPES.each_pair do |name, type|
+      module_eval <<-"end_code"
+        # Starts a constraint on this set union the specified set.
+        def #{name}(operand)
+          unless operand.kind_of?(Gecode::FreeSetVar) or 
+              Gecode::Constraints::Util::constant_set?(operand)
+            raise TypeError, 'Expected set variable or constant set as ' + 
+              "operand, got \#{operand.class}."
+          end
+
+          params = {:lhs => self, :op2 => operand, :operation => #{type}}
+          Gecode::Constraints::SimpleExpressionStub.new(@model, params) do |m, ps|
+            Gecode::Constraints::Set::Operation::Expression.new(m, ps)
+          end
+        end
+      end_code
+    end
+  end
 end
 
 module Gecode::Constraints::Set
@@ -30,6 +50,7 @@ module Gecode::Constraints::Set
           # Creates an operation constraint using the specified expression.
           def #{name}(expression)
             if @params[:negate]
+              # We do not allow negation.
               raise Gecode::MissingConstraintError, 'A negated set operation ' + 
                 'constraint is not implemented.'
             end
@@ -38,8 +59,16 @@ module Gecode::Constraints::Set
               raise TypeError, 'Expected set variable or constant set, got ' + 
                 "\#{expression.class}."
             end
+            
             @params[:rhs] = expression
             @params[:relation] = #{type}
+            unless @params.values_at(:lhs, :op2, :rhs).any?{ |element| 
+                element.kind_of? Gecode::FreeSetVar}
+              # At least one variable must be involved in the constraint.
+              raise ArgumentError, 'At least one variable must be involved ' +
+                'in the constraint, but all given were constants.'
+            end
+            
             @model.add_constraint OperationConstraint.new(@model, @params)
           end
         end_code
@@ -54,20 +83,18 @@ module Gecode::Constraints::Set
         op1, op2, operation, relation, rhs, negate = @params.values_at(:lhs, 
           :op2, :operation, :relation, :rhs, :negate)
 
-        if rhs.respond_to? :bind
-          rhs = rhs.bind
-        else
-          rhs = Gecode::Constraints::Util::constant_set_to_int_set(rhs)
-        end
-        
-        if op2.respond_to? :bind
-          op2 = op2.bind
-        else
-          op2 = Gecode::Constraints::Util::constant_set_to_int_set(op2)
+        op1, op2, rhs = [op1, op2, rhs].map do |expression|
+          # The expressions can either be set variables or constant sets, 
+          # convert them appropriately.
+          if expression.respond_to? :bind
+            expression.bind
+          else
+            Gecode::Constraints::Util::constant_set_to_int_set(expression)
+          end
         end
 
-        Gecode::Raw::rel(@model.active_space, op1.bind, operation, op2, 
-          relation, rhs)
+        Gecode::Raw::rel(@model.active_space, op1, operation, op2, relation, 
+          rhs)
       end
     end
   end
