@@ -1,6 +1,7 @@
 == Version 0.7.0 (in SVN)
 
 * Added the set selection constraints (set array access, select union, select intersection (optionally with specified universe) and select disjoint).
+* Added set operation constraints (union, minus, disjunc_union and intersection).
 
 == Version 0.6.1
 This release fixes various bugs introduced in 0.6.0 and changes the way that
